--- a/no.tiwas.booleantoolbox/locales/de.json
+++ b/no.tiwas.booleantoolbox/locales/de.json
@@ -458,7 +458,28 @@
     "title": "Logikgerät hinzufügen",
     "unknown_capability_fallback": "Unbekannte Fähigkeit",
     "unknown_device": "Unbekanntes Gerät",
-    "zone_label": "Zone/Raum:"
+    "zone_label": "Zone/Raum:",
+    "select_scope": {
+      "title": "Select Scope",
+      "subtitle": "Choose which zones to include in the snapshot.",
+      "description": "Select the zones (rooms) you want to capture the state from. Select \"Whole House\" to include everything (use with caution on large setups).",
+      "whole_house": "Whole House",
+      "error_no_selection": "Please select at least one zone."
+    },
+    "generating_snapshot": "Generating snapshot...",
+    "edit_configuration": {
+      "title": "Edit Configuration",
+      "subtitle": "Review and edit the captured state.",
+      "description": "The JSON below contains the captured state of your devices. You can edit values, remove devices, or change delays."
+    },
+    "error_name_required": "Please enter a device name.",
+    "error_invalid_json": "Invalid JSON:",
+    "select_devices": {
+      "deselect_all": "Deselect All",
+      "select_all": "Select All",
+      "subtitle": "Uncheck devices you don't want to include.",
+      "title": "Select Devices"
+    }
   },
   "parse": {
     "error_detecting_inputs": "Fehler beim Erkennen erforderlicher Eingänge:",
@@ -502,7 +523,19 @@
     "reset": "Auf Standard zurücksetzen",
     "save": "Speichern",
     "saved": "Einstellungen gespeichert",
-    "title": "Einstellungen"
+    "title": "Einstellungen",
+    "auto_update": {
+      "enable_label": "Enable Automatic Update",
+      "help": "Automatically update configuration/snapshots when changes are detected."
+    },
+    "debug": {
+      "enable_label": "Enable Debug Mode",
+      "help": "Enables detailed logging for troubleshooting. Not recommended for daily use as it generates a lot of logs.",
+      "legend": "Debug"
+    },
+    "general": {
+      "legend": "General"
+    }
   },
   "timeout": {
     "error": "Fehler beim Auslösen der Zeitüberschreitung:"
